# planar-ui

./: .gitignore  README.md
agent/: install.sh
agent/patches/: patch_run.py  patch_toolsets.py
agent/skills/planar/: SKILL.md
compositor/: meson.build
compositor/include/: config.h  cursor.h  decoration.h  group.h  input.h  ipc.h  keyboard.h  layers.h  output.h  popup.h  seat.h  selection.h  server.h  snap.h  toplevel.h  workspaces.h
compositor/planarctl/: planarctl.c
compositor/scripts/: planar-event-logd.py
compositor/src/: config.c  cursor.c  decoration.c  group.c  input.c  ipc.c  keyboard.c  layer-shell.c  output.c  planar.c  popup.c  seat.c  selection.c  server.c  snap.c  toplevel.c  workspaces.c
compositor/subprojects/scenefx/: meson.build
compositor/subprojects/scenefx/include/scenefx/types/: wlr_scene.h
compositor/subprojects/scenefx/types/scene/: wlr_scene.c
compositor/subprojects/tomlc99/: meson.build
ui/: main.c  meson.build
ui/ipc/: agent-ipc.c  agent-ipc.h  compositor-ipc.c  compositor-ipc.h  compositor_backend.c  compositor_backend.h
ui/panels/: panel-chat.c  panel-chat.h  panel-css.h  panel-input.c  panel-input.h  panel-log.c  panel-log.h  panel-notification.c  panel-notification.h  panel-status.c  panel-status.h  panel-topbar.c  panel-topbar.h  panel-windows.c  panel-windows.h  panel.c  panel.h
ui/src/: app.c  app.h  main.c
